# multi-agent-business-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  skill.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  GLOSSARY.md  PROJECT_WALKTHROUGH.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js  test-setup.js
frontend/src/api/: chat.ts  types.ts
frontend/src/components/: MessageContent.vue  ReasoningPanel.vue  StreamText.vue  ThinkingStream.vue
frontend/src/components/chat/: ChatInputBar.vue  WelcomeEmpty.vue
frontend/src/components/message/: AnswerBlocksPhase.vue  AnswerCodeBlock.vue  AnswerProseBlock.vue  AnswerStreamPhase.vue  AnswerTableCard.vue
frontend/src/components/sidebar/: SessionSidebar.vue
frontend/src/components/theme/: ThemeToggle.vue
frontend/src/composables/: usePacedEmitter.js  usePacedEmitter.test.js  usePacedSource.js  useSidebarCollapse.js  useStickToBottom.js  useTableExport.js  useTypewriter.js
frontend/src/constants/: streamPace.js
frontend/src/features/chat/: ChatPage.vue  chat-page.css  constants.ts  types.ts  useChatSend.ts  useChatSession.ts  useMessageState.ts
frontend/src/modules/markdown/: index.js  renderer.js
frontend/src/modules/table-export/: csv.js  (+1 more)
frontend/src/styles/: answer-prose.css  transitions.css
frontend/src/utils/: logger.js  messageParser.js  tableDisplay.js  textSanitizer.js  traceNarrative.js  traceNarrative.test.js
scripts/: demo_db.py  docker_entrypoint.sh  run_all.ps1  run_backend.ps1  run_backend_prod.ps1  run_frontend.ps1  stop_all.ps1
src/backend/: ARCHITECTURE.md  cli.py  main.py
src/backend/adapters/: __init__.py  stone_agent.py
src/backend/api/: deps.py
src/backend/app/: __init__.py  container.py  factory.py  middleware.py  rate_limit.py  security.py  static_files.py
src/backend/config/: __init__.py  logging_setup.py  paths.py  ports.json  ports.py  settings.py  structured_log.py  tracing.py
src/backend/core/: __init__.py  exceptions.py  response.py
src/backend/domain/: __init__.py  entities.py
src/backend/infrastructure/: __init__.py
src/backend/ports/: __init__.py  agent.py
src/backend/repositories/: __init__.py  base.py  mappers.py  sqlalchemy_repository.py
src/backend/schemas/: __init__.py  chat.py  common.py  health.py  session.py
src/backend/services/: __init__.py  base.py  chat_service.py  session_service.py
src/subagent/: __init__.py
src/subagent/config/: __init__.py  demo_db.py  logging_setup.py  paths.py  settings.py  tracing.py
src/subagent/stone/: AGENTS.md  __init__.py  cli.py  core.py  safety.py
tests/: conftest.py
tests/agent/: golden_agent_eval.yaml  golden_routes.yaml  test_api_doc_formatter.py  test_api_fastpath.py  test_capability_catalog.py  test_checkpointer.py  test_checkpointer_delete.py  test_delta_emitter.py  test_diagram_agent.py  test_golden_agent_eval.py  test_golden_routes.py  test_hard_route.py  test_registry.py  test_routing.py  test_routing_intents.py  test_safe_trace.py  test_safety.py  test_supervisor_integration.py  test_trace.py  test_validators.py  test_web_agent.py
tests/backend/: test_architecture.py  test_chat_service.py  test_cli.py  test_factory_workers.py  test_paths.py  test_production_security.py  test_production_settings.py  test_run_frontend_script.py  test_schemas_exports.py  test_session_service.py  test_sqlalchemy_repository.py  test_tracing.py
tests/integration/: test_api_integration.py
(+70 files in other folders)
