[project]
name = "multi_agent_system"
version = "0.3.0"
description = "Stone multi-agent chat system with LangGraph and Deep Agents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.5",
    "langchain>=1.2.3",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "pyyaml>=6.0.0",
    "import-linter>=2.0.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]
tracing = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[project.scripts]
multi-agent-backend = "backend.cli:main"
multi-agent-cli = "subagent.stone.cli:main"
multi-agent-init-demo = "subagent.config.demo_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `src/subagent` and `src/backend` install as top-level packages `subagent` / `backend`
[tool.hatch.build.targets.wheel]
packages = ["src/subagent", "src/backend"]

[tool.hatch.build.targets.wheel.force-include]
"src/backend/config/ports.json" = "backend/config/ports.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = [
    "--basetemp=tests/.tmp",
    "--cov=backend.services",
    "--cov=backend.repositories",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=70",
]
tmp_path_retention_policy = "failed"
asyncio_mode = "auto"

[tool.coverage.run]
source_pkgs = ["backend"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.importlinter]
root_packages = ["subagent", "backend"]

[[tool.importlinter.contracts]]
name = "Subagent must not import backend"
type = "forbidden"
source_modules = ["subagent"]
forbidden_modules = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "backend.ports.agent"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "subagent.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "subagent.stone.routing.registry",
    "subagent.stone.routing.classifier",
    "subagent.stone.routing.routing_intents",
    "subagent.stone.routing.routing_types",
    "subagent.stone.routing.api_fastpath",
    "subagent.stone.persistence.checkpointer",
    "subagent.stone.routing.hard_route",
    "subagent.stone.routing.resolve_route",
    "subagent.stone.runtime.core",
    "subagent.stone.runtime.turn_runner",
]
strict = true
disallow_any_generics = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "backend.main",
    "backend.services.*",
    "backend.repositories.*",
    "backend.config.*",
    "backend.core.*",
    "backend.domain.*",
    "backend.ports.*",
    "backend.schemas.*",
    "backend.api.*",
    "backend.app.*",
]
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]
